shipping/shipping-dep-ser-ingress.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: rayanah/shipping
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30006
  selector:
    app: shipping
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: shipping
          servicePort: 80
